--- a/src/app/components/inventories/inventarios-pedido/inventarios-pedido.component.html
+++ b/src/app/components/inventories/inventarios-pedido/inventarios-pedido.component.html
@@ -1,10 +1,21 @@
-<div style="width: 90%;margin: auto;">
+<div style="width: 95%;margin: auto;">
     <div class="card">
         <br>
         <div class="card-header">
             <div class="row mx-3">
                 <fa-icon [icon]="faUserFriends" [size]="'3x'" style="color: #636363;"></fa-icon>
                 <h1 class="mx-5 " style="color: #636363;">Inventarios</h1>
+                <div style="position: absolute;right:200px;" class="mx-3">
+                    <a class="btn btn-success" (click)="abrirMovInv()"
+                        style=" border-radius: 5px;
+                            font-size: 12px; width:150px;
+                            height:30px;
+                            text-align:center;
+                            margin-top: 15px;
+                            ;"
+                    > MOVER INVENTARIO
+                    </a>
+                </div>
                 <div style="position: absolute;right:0;" class="mx-3">
                     <a class="btn btn-success" (click)="buscarPortafolioLineaSugerido(lstCategorias[0])"
                         style=" border-radius: 5px; 
