--- a/src/app/components/inventories/inventarios/inventarios.component.html
+++ b/src/app/components/inventories/inventarios/inventarios.component.html
@@ -29,7 +29,7 @@
                 </a>
                 </mat-grid-tile>
         </mat-grid-list><br>
-        <div class="card-body ">
+        <div id="tabla-contenedor" class="card-body ">
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
                     <tr>
