--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -206,6 +206,11 @@
         </div>
         <br><br>
         <div class="icon-container">
+            <label for="total" class="label-input" style="font-size: 14px;">ICE :</label>
+            <input type="text" value="0" class="cool-input resultado-input" readonly>
+        </div>
+        <br><br>
+        <div class="icon-container">
             <fa-icon [icon]="faMoneyBillAlt" [size]="'3x'" style="color: #6aaf42" class="icono-input"></fa-icon>
             <label for="total" class="label-input">TOTAL:</label>
             <input type="text" [(ngModel)]="sumaTotal" class="cool-input resultado-input" readonly>
