--- a/src/app/components/users/configuracion/configuracion.component.html
+++ b/src/app/components/users/configuracion/configuracion.component.html
@@ -8,9 +8,8 @@
         </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <mat-menu #menu="matMenu">
             <a class="mat-menu-item" (click)="onPass()">Perfil</a>
-            <a [routerLink]="[{ outlets: { contentAdmin: ['usuario'] } }]" class="mat-menu-item">Configuracion</a>
-            <a [routerLink]="[{ outlets: { contentAdmin: ['usuario'] } }]" class="mat-menu-item">Salir</a>
-
+            <a (click)="onPass1()" class="mat-menu-item">Configuracion</a>
+            <a (click)="logout()" class="mat-menu-item">Salir</a>
         </mat-menu>
     </div>
     <br>
