--- a/src/app/components/sales/ver-carrito/ver-carrito.component.html
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.html
@@ -10,7 +10,7 @@
     <br /><br />
     <div class="table-container">
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-            <thead style="color: #636363;">
+            <thead style="color: #636363;" class="fixed-header">
                 <tr>
                     <tr>
                         <th style="width: 15%; ">IMAGEN</th>
