--- a/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
+++ b/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
@@ -16,7 +16,7 @@
     <br /><br />
     <div class="table-container">
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-            <thead style="color: #636363;">
+            <thead style="color: #636363;" class="fixed-header">
                 <tr>
                     <th style="width: 10%; ">CÓDIGO</th>
                     <th style="width: 10%; ">PRODUCTO</th>
