--- a/src/app/components/shooping/nuevo-proveedor/nuevo-proveedor.component.html
+++ b/src/app/components/shooping/nuevo-proveedor/nuevo-proveedor.component.html
@@ -58,6 +58,20 @@
                     </small>
                 </div>
                 <div class="form-group">
+                    <label for="provincia">Provincia</label>
+                    <select class="form-control" (change)="onSelect($event)" formControlName="provincia">
+                        <option [value]=" 0 " selected>Seleccione una provincia</option>
+                        <option *ngFor="let provincia of lstProvincias" [value]= "provincia.provincia">
+                            {{provincia.provincia}}
+                        </option>
+                    </select>
+                    <small *ngIf="selectProvincias2">
+                        <small *ngIf="selectProvincias2" style="color: red; ">
+                            Debe seleccionar una provincia.
+                        </small>
+                    </small>
+                </div>
+                <div class="form-group">
                     <label for="ciudad">Ciudad</label>
                     <select class="form-control" (change)="changeGroup($event)" formControlName="ciudad">
                         <option [value]=" 0 " selected>Seleccione una ciudad</option>
