--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -181,8 +181,8 @@
             </div>
             <br><br>
             <div class="icon-container">
-                <label for="total" class="label-input" style="font-size: 14px;">SUBTOTAL IVA 12% :</label>
-                <input type="text" [value]="calcularTotalTarifa12P() | number:'1.2-2'" class="cool-input resultado-input"
+                <label for="total" class="label-input" style="font-size: 14px;">SUBTOTAL IVA {{iva}}% :</label>
+                <input type="text" [value]="calcularTotalTarifa15P() | number:'1.2-2'" class="cool-input resultado-input"
                     readonly>
             </div>
             <br><br>
@@ -193,8 +193,8 @@
             </div>
             <br><br>
             <div class="icon-container">
-                <label for="total" class="label-input" style="font-size: 14px;">IVA 12% :</label>
-                <input type="text" [value]="calcularIva12() | number:'1.2-2'" class="cool-input resultado-input"
+                <label for="total" class="label-input" style="font-size: 14px;">IVA {{iva}}% :</label>
+                <input type="text" [value]="calcularIva15() | number:'1.2-2'" class="cool-input resultado-input"
                     readonly>
             </div>
             <br><br>
