Changes Iva button

--- a/src/app/components/sales/factura/factura.component.html
+++ b/src/app/components/sales/factura/factura.component.html
@@ -87,7 +87,7 @@
               <td>{{subtotal0}}</td>
             </tr>
             <tr>
-              <td class="aaa">SUBTOTAL 12%:</td>
+              <td class="aaa">SUBTOTAL {{iva}}%:</td>
               <td>{{subtotal12}}</td>
             </tr>
             <tr>
@@ -107,8 +107,8 @@
               <td>{{ice}}</td>
             </tr>
             <tr>
-              <td class="aaa">IVA 12%:</td>
-              <td>{{iva}}</td>
+              <td class="aaa">IVA {{iva}}%:</td>
+              <td>{{ivaCalculado}}</td>
             </tr>
             <tr>
               <td class="aaa">PROPINA:</td>
