Role and Personal Changes

--- a/src/app/components/corporations/sociedades-create/sociedades-create.component.html
+++ b/src/app/components/corporations/sociedades-create/sociedades-create.component.html
@@ -118,6 +118,10 @@
                         <option [value]="bo">
                             BACK OFFICE
                         </option>
+                        <option [value]="personal">
+                            PERSONAL
+                        </option>
+
                     </select>
                     <small *ngIf="selectRol">
                         <small *ngIf="selectRol" style="color: red; ">
