--- a/src/app/components/personalFactory/personal/personal.component.html
+++ b/src/app/components/personalFactory/personal/personal.component.html
@@ -32,8 +32,8 @@
                     <td>{{proveedor.direccionprov}}</td>
                     <td style="text-align: center;">
                         <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
-                            data-placement="bottom" title="Editar Modelo Producto"
-                            (click)=" editarProveedor(proveedor) "></fa-icon>
+                            data-placement="bottom" title="Editar Personal"
+                            (click)=" editarPersonal(proveedor) "></fa-icon>
                         <fa-icon [icon]="faTrashAlt " class="btn btn-danger " [size]=" 'lg' " data-placement="bottom "
                             title="Eliminar Modelo Producto" (click)="eliminarProveedor(proveedor)"></fa-icon>
                     </td>
