--- a/src/app/components/gestionar-personal/gestionar-personal.component.html
+++ b/src/app/components/gestionar-personal/gestionar-personal.component.html
@@ -15,27 +15,24 @@
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
             <thead style="color: #636363;">
                 <tr>
-                    <th style="width: 10%; ">Nombre</th>
+                    <th style="width: 15%; ">Nombre</th>
                     <th style="width: 10%; ">Correo</th>
-                    <th style="width: 10%; ">Telefono</th>
-                    <th style="width: 10%; ">Ciudad</th>
-                    <th style="width: 15%; ">Direccion</th>
+                    <th style="width: 15%; ">Telefono</th>
                     <th style="width: 14%; "></th>
                 </tr>
             </thead>
             <tbody style="color: #767695;">
                 <tr *ngFor="let proveedor of lstProveedores">
-                    <td>{{proveedor.nombre}}</td>
-                    <td>{{proveedor.correo}}</td>
+                    <td>{{proveedor.nombre_personal}}</td>
+                    <td>{{proveedor.email}}</td>
                     <td>{{proveedor.telefono}}</td>
-                    <td>{{proveedor.ciudad}}</td>
-                    <td>{{proveedor.direccionprov}}</td>
                     <td style="text-align: center;">
-                        <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
-                            data-placement="bottom" title="Editar Personal"
-                            (click)=" editarPersonal(proveedor) "></fa-icon>
-                        <fa-icon [icon]="faTrashAlt " class="btn btn-danger " [size]=" 'lg' " data-placement="bottom "
-                            title="Eliminar Personal" (click)="eliminarPersonal(proveedor)"></fa-icon>
+                        <td style="text-align: center;">
+                            <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
+                                data-placement="bottom" title="Editar Modelo Producto"
+                                (click)=" editarPersonal(proveedor) "></fa-icon>
+                            <fa-icon [icon]="faTrashAlt " class="btn btn-danger " [size]=" 'lg' " data-placement="bottom "
+                                title="Eliminar Modelo Producto" (click)="eliminarSociedades(proveedor)"></fa-icon>
                     </td>
                 </tr>
             </tbody>
